[metadata]
name = chatgpt_fastapi
version = 0.1.0
author = ILJI CHOI
author_email = choiilji@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AppleHolic/chatgpt-fastapi
project_urls =
    Bug Tracker = https://github.com/AppleHolic/chatgpt-fastapi/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    requests==2.28.2
    fastapi[full]==0.92.0
    uvicorn==0.20.0
    aiohttp==3.8.4
    pydantic==1.10.5

[options.extras_require]
dev = 
    black==22.12.0
    flake8==6.0.0
    isort==5.12.0
    mypy==0.991
    pre-commit==2.20.0

[options.packages.find]
exclude = tests

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
python_version = 3.10
targets = 
    chatgpt_fastapi
dmypyExecutable = .venv/bin/dmypy
ignore_missing_imports = True
follow_imports = skip