[metadata]
name = chatgpt_streamlit
version = 0.1.0
author = ILJI CHOI
author_email = choiilji@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AppleHolic/chatgpt-streamlit
project_urls =
    Bug Tracker = https://github.com/AppleHolic/chatgpt-streamlit/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    requests==2.28.2
    streamlit==1.19.0
    audio-recorder-streamlit==0.0.8
    openai==0.27.0

[options.extras_require]
dev = 
    black==22.12.0
    flake8==6.0.0
    isort==5.12.0
    mypy==0.991
    pre-commit==2.20.0
tts =
    torch==1.13.1
    soundfile==0.12.1
    torchaudio==0.13.1
    omegaconf==2.1.1

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
python_version = 3.10
check_untyped_defs = True
no_implicit_optional = True
disallow_untyped_defs = True
follow_imports = skip
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
ignore_missing_imports = True
